# deepthought

./: .gitignore  Compile.hs  Expr.hs  Lexer.hs  Parser.hs  ShowXml.hs  Test.hs  Types.hs  deepthought.cabal
pmc/: atom.pmc
src/: AST.hs  ASTErrors.hs  Compile.hs  CompileAST.hs  CompileParrot.hs  CompileXml.hs  CompilerErrors.hs  Errors.hs  Eval.hs  Expr.hs  Interpreter.hs  Lexer.hs  Misc.hs  Parser.hs  State.hs  StdLib.hs  Types.hs
test/: CompileTest.hs  ParserTest.hs  Test.hs
